--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -33,4 +33,4 @@ jobs:
      with:
        playbook: ambiente/provide.yml
        inventory: ambiente/config/inventory.aws_ec2.yml 
-       teste
+       teste aprendendo1
